# oldmin

./: .gitignore  CMakeLists.txt  LICENSE  buildold.sh  config.conf  minerold.py  tuan2.py
